used -webkit-backface-visibility:hidden; to prevent blinkiness. thx brianleroux

--- a/themes/default/jquery.mobile.core.css
+++ b/themes/default/jquery.mobile.core.css
@@ -10,14 +10,14 @@
 .ui-mobile a img, .ui-mobile fieldset { border: 0; }
 
 /* responsive page widths */
-.ui-mobile body {  margin: 0; overflow-x: hidden; -webkit-user-select: none; -webkit-text-size-adjust: none; min-height: 100%; }
+.ui-mobile body {  margin: 0; overflow-x: hidden; -webkit-backface-visibility:hidden; -webkit-user-select: none; -webkit-text-size-adjust: none; min-height: 100%; }
 
 /*orientations from js are available */
 .portrait {  }
 .landscape {  }
 
 /* "page" containers - full-screen views, one should always be in view post-pageload */
-.ui-page { top: 0; left: 0; width: 100%; min-height: 100%; position: absolute; display: none; border: 0; -webkit-transform: translate3d(0,0,0); } 
+.ui-page { top: 0; left: 0; width: 100%; min-height: 100%; position: absolute; display: none; border: 0; } 
 .ui-page-active { display: block; overflow: visible; }
 
 /* loading screen */
